--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
     "version": "0.1.0",
     "private": true,
     "dependencies": {
+        "@emotion/react": "^11.11.4",
+        "@emotion/styled": "^11.11.5",
+        "@mui/icons-material": "^5.15.21",
+        "@mui/material": "^5.15.21",
         "axios": "^0.21.4",
         "react": "^17.0.2",
         "react-dom": "^17.0.2",
