--- a/requirements.txt
+++ b/requirements.txt
@@ -1,4 +1,15 @@
-flask==2.0.1
-requests==2.26.0
-python-dotenv==0.19.0
-flask-cors
+blinker==1.8.2
+certifi==2024.6.2
+charset-normalizer==3.3.2
+click==8.1.7
+Flask==3.0.3
+Flask-Cors==4.0.1
+idna==3.7
+itsdangerous==2.2.0
+Jinja2==3.1.4
+MarkupSafe==2.1.5
+python-dotenv==1.0.1
+requests==2.32.3
+urllib3==2.2.2
+Werkzeug==3.0.3
+gunicorn
